--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server_start":"node server/server.js",
+    "create_admin":"node server/AdminCreator.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
